Overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
   text-align: center;
   color: #2D2E32;
   margin: 0;
-
+  overflow-x: hidden;
 }
 
 header {
@@ -32,7 +32,6 @@ h1 {
   height: auto;
   overflow: hidden;
   margin: 0 auto;
-  padding-left: 6px;
 }
 
 .info {
